# Experimentos_BPLN

./: .gitignore  .secrets.toml  .settings.toml  README.md  config.py  pyproject.toml  settings.toml
assets/: prompt.json
assets/crawler/: book.json
assets/dataset/generated_dataset/: book_dataset.json
assets/exporter/: dataset1.jsonl  dataset_3ed.jsonl
books/: books_structure.json  books_structure.py  pdf_extraction.py  pdf_extraction_json.py  pdf_extraction_txt.py
books/livros_extraidos/1 Linguística Computacional Teoria  Prática Othero e Menuzzi/: DESENVOLVENDO UM PARSER SINTÁTICO  PARTE I ALGUMAS NOÇÕES TEÓRICAS IMPORTANTES.txt  DESENVOLVENDO UM PARSER SINTÁTICO  PARTE II COLOCANDO A MÃO NA MASSA.txt  NOSSA GRAMÁTICA.txt  TECNOLOGIA E LINGUAGEM.txt  TRABALHOS EM LINGUÍSTICA COMPUTACIONAL.txt
books/livros_extraidos/11 Deep Learning and Machine Learning - Natural Language Chen et al/: Data Cleaning for Training Large Language Models.txt  Natural language processing.txt  Text Preprocessing.txt
books/livros_extraidos/2 Linguística Computacional Claudia Freitas/: ANOTAÇÃO BASTIDORES.txt  ANOTAÇÃO PRINCIPAIS TIPOS.txt  ANÁLISE DE ERROS.txt  LINGUÍSTICA COMPUTACIONAL E LINGUÍSTICA UM POUCO DE HISTÓRIA.txt  MAIS ALGUMAS PALAVRAS SOBRE LINGUÍSTICA E LINGUÍSTICA COMPUTACIONAL.txt  PALAVRAS INICIAIS.txt  RECURSOS LEXICAIS EM FOCO LÉXICOS COMPUTACIONAIS ONTOLOGIAS.txt  (+2 more)
provider/: openai_provider.py  provider.py
scripts/: exporter.py  generate_BPLN_dataset.py  generate_computer_dataset.py  generate_data.py  generate_dataset.py  html_to_pdf.py  provider.py
(+145 files in other folders)
